update get_training_data() method

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -98,7 +98,7 @@
     "      print(\"This method only works with Windows and Linux Operating Systems.\")\n",
     "\n",
     "\n",
-    "  def get_traing_data(self):\n",
+    "  def get_training_data(self):\n",
     "    if platform.system() == 'Windows':\n",
     "      try:\n",
     "        # For Windows users.\n",
@@ -377,7 +377,7 @@
     }
    ],
    "source": [
-    "full_df = preprocessing.get_traing_data()"
+    "full_df = preprocessing.get_training_data()"
    ]
   },
   {
