--- a/notebooks/training-validation.ipynb
+++ b/notebooks/training-validation.ipynb
@@ -23,41 +23,17 @@
    "metadata": {},
    "source": [
     "# Classes \"Training\" e \"Validation\"\n",
-    "Como um dos requisitos da **GRIA** para o desafio era que os códigos fossem reaproveitados e documentados vamos criar 2 classes:\n",
-    "\n",
-    " - **Training:**\n",
-    "   - Responsável pelo processo de treinar nossos dados em vários modelos diferentes.\n",
-    " - **Validation:**\n",
-    "   - Responsável por metrificar os modelos."
+    "Como um dos requisitos da **GRIA** para o desafio era que os códigos fossem reaproveitados e documentados vamos criar a classe **Training** que vai ser Responsável pelo processo de treinar nossos dados em vários modelos diferentes e metrifica-los."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "d81a2cbc",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Training:\n",
-    "  pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b604f81",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "9fe2ba45",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Validation:\n",
     "  pass"
    ]
   },
@@ -97,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "a7a0e7d1",
    "metadata": {},
    "outputs": [],
@@ -124,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "af02dfaa",
    "metadata": {},
    "outputs": [],
@@ -134,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "582698bb",
    "metadata": {},
    "outputs": [],
@@ -152,21 +128,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b737dc",
+   "id": "cd500e88",
    "metadata": {},
    "source": [
-    "## 01.3 - Extraindo e pegando o conjunto de dados de teste\n",
-    "\n",
-    "Agora vamos pegar o conjunto de dados de teste disponibilizado pelo **Adzuna**.\n",
-    "\n",
-    "**NOTE:**  \n",
-    "Vale lembrar que nesse conjunto de dados não tem as colunas (feature) **\"SalaryRaw\"** e **\"SalaryNormalized\"**."
+    "## 01.3 - Extraindo os conjuntos de dados de treino e teste\n",
+    "Os conjuntos de dados de **treino** e **teste** vão ser utilizados quase que sempre para treinar e validar nossos modelos. Então, vamos deixar ambos já extraídos para trabalhos futuros."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8628a2f7",
+   "execution_count": 8,
+   "id": "743a8738",
    "metadata": {},
    "outputs": [
     {
@@ -178,12 +150,53 @@
     }
    ],
    "source": [
-    "preprocessing.extract_7z_data(\"../datasets/Test_rev1.7z\")"
+    "# Extract training set.\n",
+    "preprocessing.extract_7z_data(\"../datasets/Train_rev1.7z\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
+   "id": "f1332b1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File extracted!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract testing set.\n",
+    "preprocessing.extract_7z_data(\"../datasets/Test_rev1.7z\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e971f288",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67b737dc",
+   "metadata": {},
+   "source": [
+    "## 01.4 - Pegando o conjunto de dados de teste\n",
+    "\n",
+    "Agora vamos pegar o conjunto de dados de teste disponibilizado pelo **Adzuna**.\n",
+    "\n",
+    "**NOTE:**  \n",
+    "Vale lembrar que nesse conjunto de dados não tem as colunas (feature) **\"SalaryRaw\"** e **\"SalaryNormalized\"**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "f38a5e9d",
    "metadata": {},
    "outputs": [
@@ -201,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "9ff00158",
    "metadata": {},
    "outputs": [
@@ -368,7 +381,7 @@
        "4  cv-library.co.uk  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +405,7 @@
    "metadata": {},
    "source": [
     "# 03 - Treinando & Validando os Loads\n",
-    "> Na parte de **Treinamento & Validação** nós vamos utilizar as colunas (features) já Pré-Processadas em cada **Load** para treinar vários modelos de Regressão e tentar encontrar o melhor a partir que novas colunas (features) são Pré-Processadas."
+    "> Na parte de **Treinamento & Validação** nós vamos utilizar as colunas (features) já Pré-Processadas em cada **Load** para treinar vários modelos de Regressão e tentar encontrar o que nós dar o melhor resultado de acordo com os dados passados."
    ]
   },
   {
@@ -409,13 +422,13 @@
    "metadata": {},
    "source": [
     "## 03.1 - Treinando & Validando o Load-v1\n",
-    "Bem, como nós sabemos no **load-v1** foi apenas passado para a etapa de **treinamento & validação** as colunas (features) **\"Title\"** e **\"SalaryNormalized\"**.\n",
-    "\n",
-    "Ou seja, nós vamos ter as seguintes variáveis (features) para o nosso modelo:\n",
+    "Bem, como nós sabemos no **load-v1** foi passado para a etapa de **treinamento & validação** a coluna (feature) **\"Title\"**. Ou seja, nós vamos ter as seguintes variáveis (features) para os nossos modelos:\n",
     "\n",
     " - **Variáveis Independente:**\n",
-    "   - Title *(com CountVectorizer)*\n",
-    "   - FullDescription *(com CountVectorizer)*\n",
+    "   - Title *(com CountVectorizer):*\n",
+    "     - stop_words=\"english\"\n",
+    "     - max_df=0.60 (Ignores terms that appear in MORE than 60% of documents)\n",
+    "     - min_df=0.05 (Ignores terms that appear in LESS than 5% of documents)\n",
     " - **Variáveis Dependente:**\n",
     "   - SalaryNormalized (normalizada pelo a Adzuna)\n",
     "\n",
@@ -428,8 +441,62 @@
    "id": "d7c3e39d",
    "metadata": {},
    "source": [
-    "### Pegando a variável dependente (target):"
+    "**Pegando a variável dependente (target):**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4b83624c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Preprocessing' object has no attribute 'get_training_data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-3dfff0354247>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_training\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpreprocessing\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_training_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Preprocessing' object has no attribute 'get_training_data'"
+     ]
+    }
+   ],
+   "source": [
+    "df_training = preprocessing.get_training_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db365ed7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a99c8d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "279f8bc0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ded6096f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -838,399 +905,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92f49285",
-   "metadata": {},
-   "source": [
-    "## 03.2 - Treinando & Validando o Load-v2\n",
-    "Para o nosso **2° Load (Load-v2)** nós vamos ter mais uma feature para trabalhar durante a etapa de **treinamento & validação**.\n",
-    "\n",
-    "Agora nós vamos ter as seguintes variáveis (features) para os nossos modelos:\n",
-    "\n",
-    " - **Variáveis Independente:**\n",
-    "   - Title *(com CountVectorizer)*\n",
-    "   - FullDescription *(com CountVectorizer)*\n",
-    " - **Variáveis Dependente:**\n",
-    "   - SalaryNormalized (normalizada pelo a Adzuna)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7767d200",
-   "metadata": {},
-   "source": [
-    "### Pegando a variável dependente (target):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "0d14dbf8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import py7zr\n",
-    "\n",
-    "with py7zr.SevenZipFile(\"../datasets/Train_rev1.7z\", mode='r') as archive:\n",
-    "  archive.extractall(path=\"/tmp\") # For Linux users."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "67509774",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 244768 entries, 0 to 244767\n",
-      "Data columns (total 1 columns):\n",
-      " #   Column            Non-Null Count   Dtype\n",
-      "---  ------            --------------   -----\n",
-      " 0   SalaryNormalized  244768 non-null  int64\n",
-      "dtypes: int64(1)\n",
-      "memory usage: 1.9 MB\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SalaryNormalized</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>25000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>30000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>27500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>25000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   SalaryNormalized\n",
-       "0             25000\n",
-       "1             30000\n",
-       "2             30000\n",
-       "3             27500\n",
-       "4             25000"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "full_df = pd.read_csv(\"/tmp/Train_rev1.csv\")\n",
-    "df_SalaryNormalized = full_df[[\"SalaryNormalized\"]]\n",
-    "df_SalaryNormalized.info()\n",
-    "df_SalaryNormalized.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37a66c4b",
-   "metadata": {},
-   "source": [
-    "### Pegando a(s) variável(s) Independente(s):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6ba2f7a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.sparse\n",
-    "df_title_vectorized = scipy.sparse.load_npz('df_title_vectorized.npz')\n",
-    "df_fulldescription_vectorized = scipy.sparse.load_npz('df_fulldescription_vectorized.npz')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "32d0eb77",
-   "metadata": {},
-   "source": [
-    "### Separando as variáveis em \"x\" e \"y\":\n",
-    "\n",
-    "**NOTE:**  \n",
-    "Uma observação aqui é que vamos começar treinando nossos modelos apenas com a variável (feature) **\"fullDescription\"**. Só para testar se nossos modelos aprendem melhor com ela do que a variável **\"Title\"**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "9ea3b9f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = df_fulldescription_vectorized\n",
-    "y = df_SalaryNormalized"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "20942371",
-   "metadata": {},
-   "source": [
-    "### Dividindo os dados em dados de treino e dados de validação:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e7eb2c11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "x_train, x_valid, y_train, y_valid = train_test_split(x, y, test_size=0.3, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5d39ef96",
-   "metadata": {},
-   "source": [
-    "### Treinando modelos de Regressão:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b9680c3a",
-   "metadata": {},
-   "source": [
-    "#### Regressão Linear:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "24c1b4d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predictions:\n",
-      "  [[23032.87085644]\n",
-      " [33610.17330689]\n",
-      " [24136.00315204]\n",
-      " ...\n",
-      " [21469.48352848]\n",
-      " [38877.12291253]\n",
-      " [33263.10392749]]\n",
-      "MAE for Linear Regression Model: 10844\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Linear Regression.\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "lrModel = LinearRegression() # Instance.\n",
-    "lrModel.fit(x_train, y_train) # Training.\n",
-    "\n",
-    "salary_predicted_ln = lrModel.predict(x_valid)\n",
-    "print('Predictions:\\n ', salary_predicted_ln)\n",
-    "\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "mae_ln = mean_absolute_error(y_valid, salary_predicted_ln)\n",
-    "print('MAE for Linear Regression Model:', round(mae_ln))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca75cdb5",
-   "metadata": {},
-   "source": [
-    "#### Ridge Regression (L2):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "24c76201",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predictions:\n",
-      "  [[26456.86360084]\n",
-      " [23387.94309581]\n",
-      " [25311.32956758]\n",
-      " ...\n",
-      " [21352.64221595]\n",
-      " [31799.60241475]\n",
-      " [37834.19762852]]\n",
-      "MAE for Ridge Model: 8191\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import Ridge\n",
-    "ridgeModel = Ridge() # Instance.\n",
-    "ridgeModel.fit(x_train, y_train) # Training.\n",
-    "\n",
-    "salary_predicted_ridge = ridgeModel.predict(x_valid)\n",
-    "print('Predictions:\\n ', salary_predicted_ridge)\n",
-    "\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "mae_ridge = mean_absolute_error(y_valid, salary_predicted_ridge)\n",
-    "print('MAE for Ridge Model:', round(mae_ridge))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ece3e7d2",
-   "metadata": {},
-   "source": [
-    "#### Lasso Regression (L1):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "621e18e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predictions:\n",
-      "  [28389.19530136 18018.2873558  30094.66685536 ... 18804.51829832\n",
-      " 27585.07234606 37469.51276253]\n",
-      "MAE for Lasso Model: 8338\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import Lasso\n",
-    "lassoModel = Lasso() # Instance.\n",
-    "lassoModel.fit(x_train, y_train) # Training.\n",
-    "\n",
-    "salary_predicted_lasso = lassoModel.predict(x_valid)\n",
-    "print('Predictions:\\n ', salary_predicted_lasso)\n",
-    "\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "mae_lasso = mean_absolute_error(y_valid, salary_predicted_lasso)\n",
-    "print('MAE for Lasso Model:', round(mae_lasso))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f2fcf37",
-   "metadata": {},
-   "source": [
-    "#### Elastic Net:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "82e1faf2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predictions:\n",
-      "  [31254.34235054 24438.25307445 37428.63777898 ... 29305.71927444\n",
-      " 28438.02246171 32729.01976647]\n",
-      "MAE for Elastic Net Model: 9812\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import ElasticNet\n",
-    "elasticNetModel = ElasticNet() # Instance.\n",
-    "elasticNetModel.fit(x_train, y_train) # Training.\n",
-    "\n",
-    "salary_predicted_elasticNet = elasticNetModel.predict(x_valid)\n",
-    "print('Predictions:\\n ', salary_predicted_elasticNet)\n",
-    "\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "mae_elasticNet = mean_absolute_error(y_valid, salary_predicted_elasticNet)\n",
-    "print('MAE for Elastic Net Model:', round(mae_elasticNet))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1d851562",
-   "metadata": {},
-   "source": [
-    "#### Random Forest Regressor:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "049c800c",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "import numpy as np\n",
-    "\n",
-    "RandomFRModel = RandomForestRegressor(n_jobs=-1, max_features=\"auto\") # Instance.\n",
-    "RandomFRModel.fit(x_train, np.ravel(y_train)) # Training.\n",
-    "\n",
-    "salary_predicted_RandomFR = RandomFRModel.predict(x_valid)\n",
-    "print('Predictions:\\n ', salary_predicted_RandomFR)\n",
-    "\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "mae_RandomFR = mean_absolute_error(y_valid, salary_predicted_RandomFR.ravel())\n",
-    "print('MAE for RandomForestRegressor Model:', round(mae_RandomFR))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b46d2680",
    "metadata": {},
    "source": [
@@ -1245,7 +919,10 @@
     " - **No *Load-v1* nós tinhamos as seguintes situações:**\n",
     "   - Variáveis (features):\n",
     "     - Independentes:\n",
-    "       - Title *(com CountVectorizer)*\n",
+    "       - Title *(com CountVectorizer):*\n",
+    "         - stop_words=\"english\"\n",
+    "         - max_df=0.60 (Ignores terms that appear in MORE than 60% of documents)\n",
+    "         - min_df=0.05 (Ignores terms that appear in LESS than 5% of documents)\n",
     "     - Dependente:\n",
     "       - SalaryNormalized (normalizada pelo a Adzuna)\n",
     "   - *Como Métrica de Avaliação (MAE) tivemos os seguintes resultados (ordenados do menor para o maior):*\n",
