:rocket: Add testing set to Preprocessing

--- a/notebooks/training-validation.ipynb
+++ b/notebooks/training-validation.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "d81a2cbc",
    "metadata": {},
    "outputs": [],
@@ -39,6 +39,9 @@
     "from sklearn.linear_model import Lasso\n",
     "from sklearn.linear_model import Ridge\n",
     "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import KFold\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
@@ -46,49 +49,81 @@
     "\n",
     "\n",
     "class Training:\n",
-    "  \n",
+    "\n",
     "  def split_data(self, x, y):\n",
     "    x_train, x_valid, y_train, y_valid = train_test_split(x, y, test_size=0.3, random_state=42)\n",
     "    return x_train, x_valid, y_train, y_valid\n",
     "\n",
     "\n",
-    "  def training_linear_regression(self, x_train, x_valid, y_train, y_valid):\n",
+    "  def predict_linear_regression(self, x_train, x_valid, y_train, y_valid):\n",
     "    model = LinearRegression() # Instance.\n",
     "    model.fit(x_train, y_train) # Training.\n",
     "    salaries_predicted = model.predict(x_valid) # Predict salaries for x_valid.\n",
-    "    mae_metric = mean_absolute_error(y_valid, salaries_predicted)\n",
-    "    print('MAE for Linear Regression Model:', mae_metric)\n",
+    "    return salaries_predicted\n",
     "\n",
     "\n",
-    "  def training_ridge_regression(self, x_train, x_valid, y_train, y_valid):\n",
-    "    model = Ridge() # Instance.\n",
+    "  def predict_ridge_regression(self, x_train, x_valid, y_train, y_valid):\n",
+    "    model = Ridge(alpha=1.0) # Alpha = Learning Rate.\n",
     "    model.fit(x_train, y_train) # Training.\n",
     "    salaries_predicted = model.predict(x_valid)\n",
-    "    mae_metric = mean_absolute_error(y_valid, salaries_predicted)\n",
-    "    print('MAE for Ridge Model:', mae_metric)\n",
+    "    return salaries_predicted\n",
     "\n",
     "\n",
-    "  def training_lasso_regression(self, x_train, x_valid, y_train, y_valid):\n",
-    "    model = Lasso() # Instance.\n",
+    "  def predict_lasso_regression(self, x_train, x_valid, y_train, y_valid):\n",
+    "    model = Lasso(alpha=10, max_iter=1000, tol=0.1)\n",
     "    model.fit(x_train, y_train) # Training.\n",
     "    salaries_predicted = model.predict(x_valid)\n",
-    "    mae_metric = mean_absolute_error(y_valid, salaries_predicted)\n",
-    "    print('MAE for Lasso Model:', mae_metric)\n",
-    "    \n",
-    "    \n",
-    "  def training_elasticnet_regression(self, x_train, x_valid, y_train, y_valid):\n",
-    "    model = ElasticNet() # Instance.\n",
+    "    return salaries_predicted\n",
+    "\n",
+    "\n",
+    "  def predict_elasticnet_regression(self, x_train, x_valid, y_train, y_valid):\n",
+    "    model = ElasticNet(alpha=1, l1_ratio=0.5, tol=0.3)\n",
     "    model.fit(x_train, y_train) # Training.\n",
     "    salaries_predicted = model.predict(x_valid)\n",
-    "    mae_metric = mean_absolute_error(y_valid, salaries_predicted)\n",
-    "    print('MAE for Elastic Net Model:', mae_metric)\n",
+    "    return salaries_predicted\n",
     "\n",
-    "  def training_elasticnet_regression(self, x_train, x_valid, y_train, y_valid):\n",
+    "\n",
+    "  def predict_random_forest_regressorn(self, x_train, x_valid, y_train, y_valid):\n",
     "    model = RandomForestRegressor(n_jobs=-1) # Instance.\n",
     "    model.fit(x_train, np.ravel(y_train)) # Training.\n",
     "    salaries_predicted = model.predict(x_valid)\n",
-    "    mae_metric = mean_absolute_error(y_valid, salaries_predicted.ravel())\n",
-    "    print('MAE for RandomForestRegressor Model:', mae_metric)"
+    "    return salaries_predicted\n",
+    "\n",
+    "\n",
+    "  def get_mae_scores(self, x, y):\n",
+    "\n",
+    "    # KFold instance -  # shuffle=True, Shuffle (embaralhar) the data.\n",
+    "    kfold = KFold(\n",
+    "      n_splits=10,\n",
+    "      shuffle=True\n",
+    "    )\n",
+    "\n",
+    "    # Models instances.\n",
+    "    randomForestRegressor = RandomForestRegressor(n_jobs=-1)\n",
+    "    linearRegression      = LinearRegression()\n",
+    "    elasticNet            = ElasticNet()\n",
+    "    ridge                 = Ridge()\n",
+    "    lasso                 = Lasso()\n",
+    "\n",
+    "    # Apply cross-validation with KFold for all models.\n",
+    "    randomForestRegressor_result = abs(cross_val_score(randomForestRegressor, x, y, cv = kfold, scoring='neg_mean_absolute_error'))\n",
+    "    linearRegression_result      = abs(cross_val_score(linearRegression, x, y, cv = kfold, scoring='neg_mean_absolute_error'))\n",
+    "    elasticNet_result            = abs(cross_val_score(elasticNet, x, y, cv = kfold, scoring='neg_mean_absolute_error'))\n",
+    "    ridge_result                 = abs(cross_val_score(ridge, x, y, cv = kfold, scoring='neg_mean_absolute_error'))\n",
+    "    lasso_result                 = abs(cross_val_score(lasso, x, y, cv = kfold, scoring='neg_mean_absolute_error'))\n",
+    "\n",
+    "    # Create a dictionary to store the Models.\n",
+    "    dic_models = {\n",
+    "      \"randomForestRegressor\": randomForestRegressor_result.mean(),\n",
+    "      \"LinearRegression\": linearRegression_result.mean(),\n",
+    "      \"ElasticNet\": elasticNet_result.mean(),\n",
+    "      \"Ridge\": ridge_result.mean(),\n",
+    "      \"Lasso\": lasso_result.mean()\n",
+    "    }\n",
+    "    bestModel = min(dic_models, key=dic_models.get) # Select the best model.\n",
+    "\n",
+    "    print(\"MAE for Random Forest Regressor: {0}\\nMAE for Linear Regression: {1}\\nMAE for Ridge (L2) Regression: {2}\\nMAE for Lasso (L1) Regression: {3}\\nMAE for Elastic Net (L2 + L1) Regression: {4}\".format(randomForestRegressor_result.mean(), linearRegression_result.mean(), elasticNet_result.mean(), ridge_result.mean(), lasso_result.mean()))\n",
+    "    print(\"The best model is: {0} with MAE value: {1}\".format(bestModel, dic_models[bestModel]))\n"
    ]
   },
   {
@@ -101,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "fa9dd9fa",
    "metadata": {},
    "outputs": [],
@@ -594,146 +629,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "927162ff",
-   "metadata": {},
-   "source": [
-    "### Treinando modelos de Regressão:\n",
-    "Agora vamos treinar nossos modelos de regressão e pegar o resultado da **Métrica de Validação MAE** para cada Algoritmo (modelo)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e37e3e16",
-   "metadata": {},
-   "source": [
-    "#### Regressão Linear:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "53f49342",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE for Linear Regression Model: 12174.533594760238\n"
-     ]
-    }
-   ],
-   "source": [
-    "training.training_linear_regression(x_train, x_valid, y_train, y_valid)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "09a8e75c",
-   "metadata": {},
-   "source": [
-    "#### Ridge Regression (L2):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "6cc8193e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE for Ridge Model: 12174.538439350576\n"
-     ]
-    }
-   ],
-   "source": [
-    "training.training_ridge_regression(x_train, x_valid, y_train, y_valid)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "049682c7",
-   "metadata": {},
-   "source": [
-    "#### Lasso Regression (L1):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "36f4c9ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE for Lasso Model: 12174.714368247884\n"
-     ]
-    }
-   ],
-   "source": [
-    "training.training_lasso_regression(x_train, x_valid, y_train, y_valid)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ab6aae5b",
-   "metadata": {},
-   "source": [
-    "#### Elastic Net:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "a36fb2a6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE for Elastic Net Model: 13057.741326652269\n"
-     ]
-    }
-   ],
-   "source": [
-    "training.training_elasticnet_regression(x_train, x_valid, y_train, y_valid)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4bf76c7d",
-   "metadata": {},
-   "source": [
-    "#### Random Forest Regressor:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "31b4acf7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE for RandomForestRegressor Model: 12037.451130584002\n"
-     ]
-    }
-   ],
-   "source": [
-    "training.training_elasticnet_regression(x_train, x_valid, y_train, y_valid)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7a88907a",
+   "metadata": {},
+   "source": [
+    "**Testando a Métrica de validação MAE com Validação-Cruzada K-Fold**  \n",
+    "Por fim, vamos testar nossa **Métrica de Validação MAE (Mean Absolute Error)** para cada algoritmo, porém, utilizando uma **Validação-Cruzada** com **K-Fold**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "eae3fa29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE for Random Forest Regressor: 12072.775896817504\n",
+      "MAE for Linear Regression: 12218.397340449479\n",
+      "MAE for Ridge (L2) Regression: 13111.802628619404\n",
+      "MAE for Lasso (L1) Regression: 12218.662390720292\n",
+      "MAE for Elastic Net (L2 + L1) Regression: 12218.686131234477\n",
+      "The best model is: randomForestRegressor with MAE value: 12072.775896817504\n"
+     ]
+    }
+   ],
+   "source": [
+    "training.get_mae_scores(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19257ea3",
+   "metadata": {},
+   "source": [
+    "**NOTE:**  \n",
+    "Bem, para esse conjunto de dados passado o modelo que mais se adequo aos dados foi o **Random Forest Regressor**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fdf5226",
    "metadata": {},
    "source": [
     "---"
