:rocket: add save_to_csv method to preprocessing.py module

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -205,7 +205,17 @@
     "\n",
     "  def save_feature(self, feature_name, feature):\n",
     "    scipy.sparse.save_npz(f\"../resources/processed_features/{feature_name}\", feature)\n",
-    "    print(\"Feature saved!\")\n"
+    "    print(\"Feature saved!\")\n",
+    "\n",
+    "\n",
+    "  def save_to_csv(self, df, df_name):\n",
+    "    df.to_csv(\n",
+    "      path_or_buf=f\"../resources/load/{df_name}.csv\",\n",
+    "      header=True,\n",
+    "      encoding='utf-8',\n",
+    "      index=False,\n",
+    "    )\n",
+    "    print(\"DataFrame saved!\")\n"
    ]
   },
   {
